# billion_challenge

./: .gitignore  .pre-commit-config.yaml  .vscode  EN-README.md  LICENSE.md  README.md  create_measurements.py  files_size.md  pyproject.toml
dashboard/: app_duckdb_csv_table.py  app_table.py  dash_all.py
logs/: log_duckDB.csv  log_pandas.csv  log_pandas_chunk.csv  log_python_chunk.csv
src/: create_station_metrics_mart.py  etl_duckDB.py  etl_pandas.py  etl_pandas_chuncking.py  etl_python.py  etl_python_chuncking.py  etl_python_polars.py  etl_python_polars_paralelizada.py  etl_python_pyarrow.py
src/logs/: log_python.csv
