[project]
name = "billion-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Matiello Caramanti",email = "matiello.andre@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "ignr (>=2.2,<3.0)",
    "black (>=25.1.0,<26.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "github-cli (>=1.0.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
